--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -37,10 +37,10 @@
                 <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
               </textFill>
             </Label>
-                  <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" style="-fx-pref-width: 100"/>
-                  <Button layoutX="24.0" layoutY="144.0" mnemonicParsing="false" text="Add Item" onAction="#showItemInputForm" style="-fx-pref-width: 100"/>
-                  <Button layoutX="24.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" onAction="#showRequestInfo" style="-fx-pref-width: 100"/>
-                  <Button layoutX="24.0" layoutY="114.0" mnemonicParsing="false" onAction="#showItemSearchForm" text="Item lookup" style="-fx-pref-width: 100"/>
+                  <Button layoutX="15.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Return Process" style="-fx-pref-width: 100"/>
+                  <Button layoutX="15.0" layoutY="144.0" mnemonicParsing="false" text="Add Item" onAction="#showItemInputForm" style="-fx-pref-width: 100"/>
+                  <Button layoutX="15.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" onAction="#showRequestInfo" style="-fx-pref-width: 100"/>
+                  <Button layoutX="15.0" layoutY="114.0" mnemonicParsing="false" onAction="#showItemSearchForm" text="Item lookup" style="-fx-pref-width: 100"/>
         </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
@@ -48,21 +48,10 @@
           <AnchorPane id="Content" fx:id="middlePane" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="534.0">
               <children>
                 <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Main" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                  <TextField fx:id="itemDescription" disable="true" layoutX="16.0" layoutY="132.0" prefHeight="70.0" prefWidth="504.0" promptText="Item description" />
-                  <TextField fx:id="itemColor" disable="true" layoutX="193.0" layoutY="86.0" promptText="Item Color" />
-                  <ChoiceBox fx:id="itemCategory" disable="true" layoutX="15.0" layoutY="86.0" prefWidth="150.0" />
-                  <Label fx:id="itemCategoryLabel" disable="true" layoutX="15.0" layoutY="69.0" text="Category" />
-                  <DatePicker fx:id="itemDate" disable="true" layoutX="353.0" layoutY="86.0" />
-                  <Label fx:id="itemDateLabel" disable="true" layoutX="353.0" layoutY="69.0" text="Day turned in" />
-                  <TextArea fx:id="returnText" disable="true" layoutX="21.0" layoutY="66.0" prefHeight="125.0" prefWidth="493.0" text="Please refer yourself to the Procedure Reminder below this for the&#10;correct procedure when returning an item.&#10;&#10;BEFORE HANDING ITEM OVER: if it is deemed that a return is in order, please click&#10;complete return, which will redirect you to the search item page. Search for the item,&#10;and only then hand it over to the student. MAKE SURE ITEM IS REMOVED. &#10;" />
-                  <Button fx:id="completeReturn" disable="true" layoutX="21.0" layoutY="215.0" mnemonicParsing="false" onAction="#itemSearch" prefHeight="25.0" prefWidth="130.0" text="Completed return" />
-                  <Button fx:id="cancel" disable="true" layoutX="173.0" layoutY="215.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-                  <Button fx:id="addItem" disable="true" layoutX="21.0" layoutY="215.0" mnemonicParsing="false" onAction="#submitItem" prefHeight="25.0" prefWidth="130.0" text="Add item" />
-                  <TextField fx:id="itemSearchName" disable="true" layoutX="185.0" layoutY="86.0" promptText="item name" />
-                  <Button fx:id="searchButton" disable="true" layoutX="21.0" layoutY="215.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Search item" />
-                  <TextArea fx:id="procedure" disable="true" layoutX="21.0" layoutY="261.0" prefHeight="224.0" prefWidth="492.0" text="To return an item: &#10;&#10;1. Make sure the item is in storage&#10; &#10;2. Once complete, using item description and information, ask students questions about &#10;the item to make sure it is theirs. &#10;&#10;3. Once it is made sure they know the item, if applicable, do one of the following to verify&#10;ownership:&#10; -Ask them to unlock the electronic device&#10; -If no password is needed for the device, ask if it is possible to provide receipts of &#10;  purchase" />
+                  <TextArea fx:id="returnText" disable="true" layoutX="21.0" layoutY="66.0" prefHeight="125.0" prefWidth="493.0" text="Please refer yourself to the Procedure Reminder below this for the&#10;correct procedure when returning an item.&#10;&#10;BEFORE HANDING ITEM OVER: if it is deemed that a return is in order, please click&#10;Item Lookup, which will redirect you to the search item page. Search for the item,&#10;,remove it, and only then hand it over to the student. MAKE SURE ITEM IS REMOVED. &#10;" />
+                  <TextArea fx:id="procedure" disable="true" layoutX="21.0" layoutY="241.0" prefHeight="224.0" prefWidth="492.0" text="To return an item: &#10;&#10;1. Make sure the item is in storage&#10; &#10;2. Once complete, using item description and information, ask students questions about &#10;the item to make sure it is theirs. &#10;&#10;3. Once it is made sure they know the item, if applicable, do one of the following to verify&#10;ownership:&#10; -Ask them to unlock the electronic device&#10; -If no password is needed for the device, ask if it is possible to provide receipts of &#10;  purchase" />
                   <VBox>
-                    <ListView fx:id="requestListView" prefHeight="200.0" prefWidth="400.0" onMouseClicked="#handleRequestSelection" />
+                    <ListView fx:id="requestListView" prefHeight="200.0" prefWidth="400.0" onMouseClicked="#handleRequestSelection"/>
                     <TextArea fx:id="requestDetailsArea" prefHeight="200.0" prefWidth="400.0" wrapText="true" editable="false" />
                     <HBox spacing="10">
                       <Button fx:id="markFoundButton" text="Mark as Found" onAction="#markAsFound" />
@@ -188,7 +177,6 @@
           </children>
           <HBox>
               <Button fx:id="reloadButton" text="Reload" onAction="#updateLog" />
-              <Button fx:id="editItem" text="Edit" />
               <Button fx:id="removeItem" text="Remove" onAction="#removeItemButton" />
           </HBox>
           </VBox>
